--- a/readMe
+++ b/readMe
@@ -28,3 +28,6 @@ This is a work in progress
                                        -It constructs a primitive type of contradiction
             -what is next is to contruct a p and q sytem for evolving and unwrapping a statement by demorgans laws.
                  
+   -- I think it is better now. I have defined a basic subset of letters that can be used , used regular expressions to do a basic low level syntax checker,
+
+          -- Will write demrgans laws to expand expression on next round
