1 file modified  -- wiped out old readMe. -- will add examples below

--- a/readMe
+++ b/readMe
@@ -1,71 +1,2 @@
 This is a work in progress
-  To begin type:
-
-      npm start
-
-           -- A prompt will appear asking for you to enter a proposition you wish to prove
-      
-           -- Enter the proposition
-
-           -- The system will parse the proposition and write a proof
-
-
-  ----------------------------------------------
-   --Here is what has been done
-         -added peano axioms for natural numbers
-         -scaffolded (not full coded yet) basic proofs for natural numbers 
-                 transitve,reflexive etc
-
-        -scaffolded direct proof and contradiction
-        -scaffolded mechanism to take in proposition
-        
-  --deleted old test/prototype for parser
-        - modified parser. It now takes
-                                  -statement
-                                  -consequence
-                              -- and constructs a proposition
-                                  -it returns a claim in English
-                                       -It constructs a primitive type of contradiction
-            -what is next is to contruct a p and q sytem for evolving and unwrapping a statement by demorgans laws.
-                 
-   -- I think it is better now. I have defined a basic subset of letters that can be used , used regular expressions to do a basic low level syntax checker,
-
-          -- Will write demrgans laws to expand expression on next round
-
-
-          ------
-          Outpus is encouraging
-
-            ❯ npm start
-$ node whiteBoard/whiteBoard.js
-Enter statement   !(p^q)
------Worksheet-----
-!(p^q)
-!(p^q)
-(!pv!q)
-!(p^q) == (!pv!q)
-(!pv!q)
-Enter consequence   k
-Proposition:
-
-
---  proof --
-Claim: 
- if (!pv!q) then k
-Proof:
---By Contradiction --
-Assumption: not (!pv!q) then k
---By Contrapositive --
-not (!pv!q) then not k
-
-------------
-
-Added set stuff
-   --union
-   --intersection
-   --differnce
-         --------
-            - Need to add them to whiteBoard 
-    - added a union computing function
-    - added an intesection compiuting function
-         ---------
+     -- syntax and examples will appear below.
