1 file modified -- spelling errors corrected -- proove  to prove, and corrected proof

--- a/readMe
+++ b/readMe
@@ -12,9 +12,9 @@ This is a work in progress
           can create relations
           can check if it is a relations
           understands demorgans laws
-          can proove by Contradiction
-          can proove by Contrapositive
-          can do direct proove
+          can prove by Contradiction
+          can prove by Contrapositive
+          can do direct proof
           can understand quantifiers
           can understand whole numbers
           can map from one set to a new set and compare based on assigned map
