--- a/readMe
+++ b/readMe
@@ -147,10 +147,10 @@ f is a bijection
 
 -- relations
 
-1,3  is a relation
-32,3  is a relation
-3,2  is a relation
-The below ordered pair was created
+[1,3]  is a relation
+[32,3]  is a relation
+[3,2]  is a relation
+The below ordered pairs were created
 [
   [ 1, 4 ], [ 2, 5 ],
   [ 3, 2 ], [ 4, 1 ],
