--- a/readMe
+++ b/readMe
@@ -20,7 +20,7 @@ This is a work in progress
           can map from one set to a new set and compare based on assigned map
           can do symbolic algebra via trees
 
-                  *------- A note on symbolic algebra via trees -------*
+ *------- A note on symbolic algebra via trees -------*
           
 
 ~/projects/math-proof-assistant
@@ -174,6 +174,21 @@ The below ordered pairs were created
   [ 7, 6 ]
 ]
 
+------
+Sample algebraic expression manipulations (graph and function paths)
+
+❯ node Algebra/algebra.js
+simplifyTree {
+  head: simplify {
+    operation: [Function: add],
+    left: simplify { operation: [Function: div], left: 'x', right: 4 },
+    right: simplify { operation: [Function: sub], left: 14, right: 'y' }
+  }
+}
+x/4+14-y
+Please enter algebraic expression  div(5,mul('x',add('2x',5)))
+div(5,mul('x',add('2x',5)))
+5/x*2x+5
 
 
 Still working on prototype. As can be seen it can 
