1 file modified -- corrected spelling error(singular/plural) changed relations  to relation

--- a/readMe
+++ b/readMe
@@ -10,7 +10,7 @@ This is a work in progress
           can check bijection
           can do set algebra ( union, intersection, difference)
           can create relations
-          can check if it is a relations
+          can check if it is a relation
           understands demorgans laws
           can prove by Contradiction
           can prove by Contrapositive
